# apex-spiral

./: .gitignore  .reflux_msg.txt  17层公式体系学习.md  A2A-MEMORY.md  A2A_loaded_skills.md  AGENTS.md  ANTI_HALLUCINATION_GENES.md  APEX_AGI_CORE_V3.md  APEX_AGI_RUNTIME_OS.md  APEX_CLOSED_LOOP_V2.md  APEX_EVOLUTION_BOOST.md  APEX_FUSION_CORE_V2.md  APEX_GAP_ANALYSIS.md  APEX_PHYSICS_BIO_CHEM_MATH.md  APEX_PHYSICS_BIO_FORMULA.md  APEX_TOKEN_OPTIMIZATION_MD.md  APEX_TWELVE_FACTOR.md  APEX_V11_ENHANCED.md  B14_FIX.md  BIO_APEX_FUSION.md  BUGFIX_GPT_ANALYSIS.md  CLAW_SKILLS_LEARN.md  Cargo.toml  DEFECT_DETECTION_GENES.md  DEVOUR_CONTINUE.md  DEVOUR_ROUND2.md  DEVOUR_ROUND3.md  DEVOUR_ROUND4.md  DEVOUR_ROUND5.md  DEVOUR_ROUND6.md  DEVOUR_ROUND7.md  DEVOUR_ROUND8.md  DEVOUR_ROUND9.md  DREAMS.md  D_PRO_BOOST.md  Dockerfile  EMV_CLAW_SWRs_GINI_FUSION_PLAN.md  EMV_SKILL_FRAMEWORK.md  EVOLUTION_ENHANCER.md  EVOLUTION_GENES.md  (+119 more)
a2a-resources/:  fetcher. log  absorbed.list  failed.list  inherited.list  pending.list  restart_a2a.sh
apex-4capabilities/: README.md  (+5 more)
apex-ene/engine/: Cargo.toml
apex-ene/engine/src/: apexe.rs  evolution.rs  main.rs  selfmod.rs
apex-ene/scavenger/: Cargo.toml
apex-ene/scavenger/src/: absorb.rs  github.rs  main.rs  papers.rs
emv_skill/: Cargo.toml
emv_skill/src/: lib.rs  main.rs  skill_selector.rs
nanoGPT-claw/: Cargo.toml  README.md
nanoGPT-claw/src/: code_assessment.rs  daemon_service.rs  lib.rs  main.rs
nanoGPT-claw/src/cli/: commands.rs  daemon.rs  mod.rs
nanoGPT-claw/src/config/: env.rs  mod.rs  settings.rs
nanoGPT-claw/src/cot/: introspection.rs  mod.rs  reasoner.rs
nanoGPT-claw/src/evolution/: apex_akashic.rs  apex_self_check.rs  bench.rs  mod.rs  self_improve.rs  super_upgrade.rs
nanoGPT-claw/src/gateway/: feishu.rs  github.rs  mod.rs
nanoGPT-claw/src/memory/: long_term.rs  mod.rs  persistent.rs  session.rs
nanoGPT-claw/src/middleware/: mod.rs  router.rs
nanoGPT-claw/src/scheduler/: anthropic.rs  llm_client.rs  mod.rs  ollama.rs  openai.rs  provider.rs  provider.rs.bak  retry.rs  task.rs
nanoGPT-claw/src/skill/: auto_fix.rs  built_in.rs  github_api.rs  mod.rs
nanoGPT-claw/src/system/: coordinator.rs
nanoGPT-claw/src/webui/: integrated.rs  mod.rs
(+2048 files in other folders)
