[package]
name = "emv_skill"
version = "2.0.0"
edition = "2021"
description = "EMV熵Skill基因网络选择框架 - Rust实现"
authors = ["璇玑帝国"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "emv_skill"
path = "src/lib.rs"

[[bin]]
name = "emv_skill"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
