[package]
name = "nano-gpt-claw"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
thiserror = "1"
once_cell = "1.19"
parking_lot = "0.12"
base64 = "0.21"
ureq = "3.3.0"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1.10"
lazy_static = "1.4"
dirs = "5.0"

# Web UI
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
http = "1"

# Config
toml = "0.8"
serde_yaml = "0.9"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
mockall = "0.11"

[[bin]]
name = "nano-gpt-claw"
path = "src/main.rs"

[workspace]
