[package]
name = "apexe-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apexe"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
apex-v10-core = { path = "../v10-core" }
