[package]
name = "apexe-scavenger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scavenge"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
